Tugas 14: Laravel CRUD ORM

--- a/laravelIntro/.env
+++ b/laravelIntro/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:j/AHRb0X6B2UZOlUw9UwWK2S8c/L+azOl5Cx5u1m5iU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
